--- a/pom.xml
+++ b/pom.xml
@@ -72,40 +72,40 @@
   </dependencies>
 
   <build>
-      <plugins>
-          <plugin>
-              <groupId>com.github.temyers</groupId>
-              <artifactId>cucumber-jvm-parallel-plugin</artifactId>
-              <version>2.2.0</version>
-              <executions>
-                  <execution>
-                      <id>generateRunners</id>
-                      <phase>validate</phase>
-                      <goals>
-                          <goal>generateRunners</goal>
-                      </goals>
-                      <configuration>
-                          <glue>com.mavenit.selenium.training</glue>
-                          <featuresDirectory>src/test/resources</featuresDirectory>
-                          <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
-                          <format>json</format>
-                          <tags>"~@ignored"</tags>
-                      </configuration>
-                  </execution>
-              </executions>
-          </plugin>
-          <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.19</version>
-              <configuration>
-                  <forkCount>5</forkCount>
-                  <reuseForks>true</reuseForks>
-                  <includes>
-                      <include>**/Parallel*IT.class</include>
-                  </includes>
-              </configuration>
-          </plugin>
-      </plugins>
+      <!--<plugins>-->
+          <!--<plugin>-->
+              <!--<groupId>com.github.temyers</groupId>-->
+              <!--<artifactId>cucumber-jvm-parallel-plugin</artifactId>-->
+              <!--<version>2.2.0</version>-->
+              <!--<executions>-->
+                  <!--<execution>-->
+                      <!--<id>generateRunners</id>-->
+                      <!--<phase>validate</phase>-->
+                      <!--<goals>-->
+                          <!--<goal>generateRunners</goal>-->
+                      <!--</goals>-->
+                      <!--<configuration>-->
+                          <!--<glue>com.mavenit.selenium.training</glue>-->
+                          <!--<featuresDirectory>src/test/resources</featuresDirectory>-->
+                          <!--<cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>-->
+                          <!--<format>json</format>-->
+                          <!--<tags>"~@ignored"</tags>-->
+                      <!--</configuration>-->
+                  <!--</execution>-->
+              <!--</executions>-->
+          <!--</plugin>-->
+          <!--<plugin>-->
+              <!--<groupId>org.apache.maven.plugins</groupId>-->
+              <!--<artifactId>maven-surefire-plugin</artifactId>-->
+              <!--<version>2.19</version>-->
+              <!--<configuration>-->
+                  <!--<forkCount>5</forkCount>-->
+                  <!--<reuseForks>true</reuseForks>-->
+                  <!--<includes>-->
+                      <!--<include>**/Parallel*IT.class</include>-->
+                  <!--</includes>-->
+              <!--</configuration>-->
+          <!--</plugin>-->
+      <!--</plugins>-->
   </build>
 </project>
